--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   height: 100vh;
 }
 
@@ -31,7 +31,7 @@ li {
 h1,
 h2,
 h3 {
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
@@ -49,7 +49,8 @@ h3 {
   align-items: center;
   padding: 20px 0;
   border-bottom: 1px solid #e6e6e6;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
+  /* margin-bottom: 60px; */
 }
 
 .header ul {
@@ -77,7 +78,8 @@ h3 {
 
 .heading {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 600;
+  /* font-weight: 700; */
   margin-bottom: 50px;
   padding: 0 20px;
 }
@@ -86,23 +88,29 @@ h3 {
   color: #828282;
 }
 
-.goals {
+.tasks {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.goal {
+.task {
   background-color: #f4f4f4;
-  margin: 10px 0;
-  padding: 20px 0 10px;
+  /* margin: 10px 0; */
+  padding: 20px 0 8px;
   position: relative;
 }
 
-.goal .close {
+.task-date {
+  color: #777;
+  font-size: small;
+}
+
+.task .close {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 8px;
+  right: 8px;
+  /* right: 15px; */
   cursor: pointer;
   border: none;
   background: none;
@@ -149,10 +157,13 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  /* text-transform: uppercase; */
+  font-variant: small-caps;
 }
 
 .btn svg {
-  margin-right: 8px;
+  margin-right: 10px;
 }
 
 .btn-reverse {
